# career-intelligence-copilot

./: .gitignore  AGENTS.md  README.md  career-log.md  pyproject.toml  smoke_test_openai_extractor.py  tmp_fixture_job.txt  tmp_manual_out.json
applications/: application_tracker.csv
applications/company_notes/: h2o_ai.md
applications/network/: network_tracker.csv
data/: career_profile.example.yaml  career_profile.yaml
data/opportunities/: README.md
docs/: 00_repository_guide.md  01_executive_summary.md  02_problem_statement.md  03_product_vision.md  04_functional_specification.md  05_engineering_principles.md  06_domain_model.md  07_testing_strategy.md  08_implementation_notes.md  09_validation_report.md  10_roadmap.md  11_changelog.md  12_phase_history.md
docs/adr/: 001_python_yaml_profile_foundation.md  002_opportunity_persistence.md
docs/eval/: career_profile_enrichment_report.md  career_profile_evidence_model_refinement.md  fr002_openai_manual_eval.md  fr003_openai_manual_eval.md  fr006_manual_validation.md  fr006_phase_c_design.md  phase2_release_report.md
manual_validation/jobs/: 001_strong_ai_engineer.txt  002_bluefin_ai_systems_developer.txt  003_mid_role.txt  004_associate_ai_product_manager.txt  005_network_engineer_automation_ai.txt  006_senior_ai_engineer_kogan.txt  007_technology_and_automation_lead.txt  008_repurpose_it_ai_adoption_specialist.txt  011_officeworks_ai_engineer.txt  (+5 more)
scripts/: run_application_strategy_manual.py  run_cv_generation_manual.py
tests/: conftest.py
tools/: fr003_live_eval_output.txt  manual_eval_openai_assessor.py
(+195 files in other folders)
