[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "career-intelligence-copilot"
version = "0.1.0"
description = "Evidence-based career decision support"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "PyYAML>=6",
    "typer>=0.12",
    "openai>=1.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[project.scripts]
cic = "career_intelligence.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
